--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,10 @@
         </div>
     </footer>
 
+    <!-- Global Modals -->
+    {% include thank-you-modal.html %}
+    {% include signup-modal.html %}
+
     <!-- JavaScript -->
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </body>
